@@ -46,7 +46,6 @@ Hardware:
 ```
 And here is the `Java` version:
 ```
-Picked up JAVA_TOOL_OPTIONS: -Xms1024m -Xmx2048m -XX:PermSize=256m -XX:MaxPermSize=1024m
 java version "1.7.0_72"
 Java(TM) SE Runtime Environment (build 1.7.0_72-b14)
 Java HotSpot(TM) 64-Bit Server VM (build 24.72-b04, mixed mode)
